--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Mr-Viker/video-player.git"
+    "url": "git@github.com:Mr-Viker/page-helper.git"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
